--- a/index.html
+++ b/index.html
@@ -11,73 +11,9 @@
 </head>
 <body>
 
-    <div id="page container">
+    <div id="react-app"></div>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <h3 class="navbar-brand">The Work Log</h3>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <h6 class="nav-link">Tasks <span>(0)</span></h6>
-                    </li>
-                    <li class="nav-item">
-                        <h6 class="nav-link">Logs <span>(0)</span></h6>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-        <div id="header my-5">
-            <h1 class="text-center">The Work Log</h1>
-        </div>
-
-        <div id="main">
-
-            <div class="row my-5">
-
-                <div id="form" class="col-6 mx-auto">
-                    <form action="" method="post">
-                        <div class="form-group">
-                            <label for="taskname">Add a new task!</label>
-                            <input class="form-control" type="text" name="taskname" id="taskname" placeholder="Add your to do task here...">
-                        </div>
-                        <button type="submit" class="btn btn-dark">Submit</button>
-                    </form>
-                </div>
-
-            </div>
-
-            <div class="row mx-auto my-5">
-
-                <div id="tasks_list" class="col-6 border border-dark">
-                    <div class="task card">
-                        <div class="card-body">
-                            <h4 class="card-title">To Do Task</h4>
-                            <p class="card-text">Find a job.</p>
-                            <button class="btn btn-dark"><i class="fa fa-plus-square text-light" aria-hidden="true"></i></button>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="logs_list" class="col-6 border border-dark">
-                    <div class="goal card">
-                        <div class="card-body">
-                            <h4 class="card-title">Task In Progress</h4>
-                            <p class="card-text">Do the work log app.</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-
-<script src="src/vendor.bundle.js"></script>
-<script src="src/main.bundle.js"></script>
+<script src="dist/vendor.bundle.js"></script>
+<script src="dist/main.bundle.js"></script>
 </body>
 </html>
